# reminduck

./: README.md  io.github.ellie_commons.reminduck.flathub.yml  io.github.ellie_commons.reminduck.yml  io.github.elly_code.reminduck.devel.yml  io.github.elly_code.reminduck.yml  meson.build  meson_options.txt
.github/workflows/: CI.yml
data/: Application.css  meson.build  reminduck.desktop.in  reminduck.desktop.in.in  reminduck.gresource.xml  reminduck.gresource.xml.in  reminduck.gschema.xml  reminduck.gschema.xml.in  reminduck.metainfo.xml.in  reminduck.metainfo.xml.in.in
data/icons/: meson.build
docs/: buildsystem.md  flatpak.md  packagings.md
po/: ca.po  de.po  es.po  fr.po  hr.po  io.github.ellie_commons.reminduck.pot  it.po  meson.build  nl.po  pt.po  reminduck.pot  ru.po  sv.po  tr.po  vi.po
po/extra/: POTFILES  ca.po  de.po  es.po  extra.pot  fr.po  hr.po  it.po  nl.po  pt.po  ru.po  tr.po
src/: Application.vala  Config.vala.in  Constants.vala  MainWindow.vala  meson.build
src/Objects/: Quack.vala  Reminder.vala
src/Services/: Database.vala  Utils.vala
src/Views/: ReminderEditor.vala  RemindersView.vala  WelcomeView.vala
src/Widgets/: RepeatBox.vala
windows/: deploy.sh
